# Kattar-Karachi-

./: .gitignore  CMakeLists.txt  README.md  build  build.bat  dump_code.bat
include/: ObstacleType.h  Pothole.h  PushCart.h  TaskManager.h  TrashPile.h  UImanager.h  audiomanager.h  game.h  main.h  map.h  obstacle.h  player.h  scoremanager.h  shopper.h  task.h
src/: Pothole.cpp  TasKmanager.cpp  UImanager.cpp  audiomanager.cpp  game.cpp  main.cpp  map.cpp  obstacle.cpp  player.cpp  pushcart.cpp  scoremanager.cpp  shopper.cpp  task.cpp  trashpile.cpp
